--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -138,7 +138,7 @@
                 <div class="col-md-9">
                                                                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -191,7 +191,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://138.2.82.216/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -550,16 +550,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-6-25-free-v2ray.htm" title="免费Clash SSR - 6月25日22M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月25日22M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-12-free-node-subscribe.htm" title="免费Clash SSR - 6月12日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 6月12日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-8-free-node-subscribe.htm" title="免费Clash SSR - 7月8日18.9M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 7月8日18.9M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-30-node-share-links.htm" title="免费Clash SSR - 6月30日18.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 6月30日18.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-22-free-high-speed-nodes.htm" title="免费Clash SSR - 6月22日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点订阅分享">免费Clash SSR - 6月22日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-5-free-high-speed-nodes.htm" title="免费Clash SSR - 7月5日18.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 7月5日18.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-26-node-share.htm" title="免费Clash SSR - 6月26日18M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月26日18M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-20-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月20日22.3M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月20日22.3M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-29-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月29日18.2M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 6月29日18.2M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-18-free-v2ray.htm" title="免费Clash SSR - 6月18日23M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 6月18日23M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-11-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月11日21.1M/S|免费V2ray/Shadowrocket/Clash/SSR节点订阅分享">免费Clash SSR - 6月11日21.1M/S|免费V2ray/Shadowrocket/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-19-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月19日22.8M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月19日22.8M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-1-free-subscribe-node.htm" title="免费Clash SSR - 7月1日22.4M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 7月1日22.4M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-13-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月13日19.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 6月13日19.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-24-node-share.htm" title="免费Clash SSR - 6月24日20.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享">免费Clash SSR - 6月24日20.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-21-free-v2ray.htm" title="免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-10-free-high-speed-nodes.htm" title="免费Clash SSR - 6月10日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月10日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-15-node-share-links.htm" title="免费Clash SSR - 6月15日21.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月15日21.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -571,7 +571,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
